fixed overflow for notesList sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ button:hover {
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
+#noteID {
+  display: none;
+}
+
 /******************************************
 /* LAYOUT
 /*******************************************/
@@ -132,10 +136,13 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 0;
+  overflow-y: auto;
 }
 
 .notesList li {
   height: 75px;
+  display: flex;
+  justify-content: center;
 }
 
 .notesList li:hover {
